--- a/app/src/main/res/layout/charge_panel.xml
+++ b/app/src/main/res/layout/charge_panel.xml
@@ -132,141 +132,281 @@
             android:orientation="vertical"
             android:layout_margin="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="新增记录"
-                android:textSize="25sp"
-                android:textStyle="bold"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="新增记录"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+
+                <Spinner
+                    android:id="@+id/charge_add_type"
+                    android:layout_gravity="bottom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/add_type"/>
+            </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/charge_add_record_area"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="流程卡号："
-                    android:textSize="16sp"/>
-                <EditText
-                    android:id="@+id/add_record_process_num"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:maxLength="15"
-                    android:hint="请输入流程卡号"
-                    android:textSize="16sp"
-                    android:inputType="numberSigned"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="流程卡号："
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_record_process_num"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:maxLength="15"
+                        android:hint="请输入流程卡号"
+                        android:textSize="16sp"
+                        android:inputType="numberSigned"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="产品型号："
+                        android:textSize="16sp"/>
+                    <Spinner
+                        android:id="@+id/add_record_model_name"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="9dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="型号单价："
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_record_model_price"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:hint="请输入型号单价"
+                        android:maxLength="6"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="合格个数："
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_record_qulified_num"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:maxLength="3"
+                        android:hint="请输入合格个数"
+                        android:textSize="16sp"
+                        android:inputType="numberSigned"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="添加日期："
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:id="@+id/add_record_add_date"
+                        android:layout_width="180dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3db0ed"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="备         注："
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_record_comment"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:maxLength="40"
+                        android:hint="选填"
+                        android:textSize="16sp"/>
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/charge_add_attendance_area"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="产品型号："
-                    android:textSize="16sp"/>
-                <Spinner
-                    android:id="@+id/add_record_model_name"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="9dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="型号单价："
-                    android:textSize="16sp"/>
-                <EditText
-                    android:id="@+id/add_record_model_price"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:hint="请输入型号单价"
-                    android:maxLength="6"
-                    android:textSize="16sp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="合格个数："
-                    android:textSize="16sp"/>
-                <EditText
-                    android:id="@+id/add_record_qulified_num"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:maxLength="3"
-                    android:hint="请输入合格个数"
-                    android:textSize="16sp"
-                    android:inputType="numberSigned"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="添加日期："
-                    android:textSize="16sp"/>
-                <TextView
-                    android:id="@+id/add_record_add_date"
-                    android:layout_width="180dp"
-                    android:layout_marginLeft="3dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="#3db0ed"
-                    android:textSize="16sp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:text="备         注："
-                    android:textSize="16sp"/>
-                <EditText
-                    android:id="@+id/add_record_comment"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:maxLength="40"
-                    android:hint="选填"
-                    android:textSize="16sp"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="姓         名：  "
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_attendance_name"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:maxLength="10"
+                        android:hint="请输入姓名"
+                        android:textSize="16sp"
+                        android:inputType="text"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="9dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="时长/小时："
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_attendance_hours"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:hint="请输入时长"
+                        android:maxLength="5"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="9dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="考勤类型： "
+                        android:textSize="16sp"/>
+                    <RadioGroup
+                        android:id="@+id/add_attendance_type"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <RadioButton
+                            android:id="@+id/add_attendance_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true"
+                            android:text="加班" />
+                        <RadioButton
+                            android:id="@+id/add_attendance_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="请假"/>
+                    </RadioGroup>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="添加日期： "
+                        android:textSize="16sp"/>
+                    <TextView
+                        android:id="@+id/add_attendance_add_date"
+                        android:layout_width="180dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="#3db0ed"
+                        android:textSize="16sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:text="备         注：  "
+                        android:textSize="16sp"/>
+                    <EditText
+                        android:id="@+id/add_attendance_comment"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:maxLength="40"
+                        android:hint="选填"
+                        android:textSize="16sp"/>
+                </LinearLayout>
             </LinearLayout>
 
             <Button
