--- a/app/src/main/res/layout/check_search_dialog.xml
+++ b/app/src/main/res/layout/check_search_dialog.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/check_sort_item_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
