--- a/app/src/main/res/layout/history_panel.xml
+++ b/app/src/main/res/layout/history_panel.xml
@@ -1,66 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/history_no_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="暂无数据"
+        android:textSize="26dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="查询条件"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="日         期："
-                android:textSize="16sp"/>
-            <Spinner
-                android:id="@+id/query_year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <Spinner
-                android:id="@+id/query_months"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:entries="@array/months"/>
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="排序方式："
-                android:textSize="16sp" />
-            <Spinner
-                android:id="@+id/sort_item"
+                android:layout_marginTop="10dp"
+                android:text="查询条件"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"/>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/history_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:entries="@array/sort_item"/>
-            <Spinner
-                android:id="@+id/sort_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:entries="@array/sort_type"/>
+                android:layout_marginRight="10dp"
+                android:text="筛  选"
+                android:layout_gravity="bottom"
+                android:gravity="right"
+                android:textSize="16sp"
+                android:textColor="#3db0ed" />
         </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
@@ -121,4 +102,4 @@
             android:layout_height="fill_parent"/>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
